[package]
name = "executionbackup-rust"
version = "1.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.16", features = ["headers"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0"
futures = { version = "0.3"}
jsonwebtoken = "8"
serde = {version = "1.0", features = ["derive"] }
hex = "0.4"
chrono = "0.4"
clap = "2.33.3"
triehash = "0.8.4"
hash-db = "0.15.2"
ethers-core = "1.0.2"
headers = "0.3"
rlp = "0.5.2"
keccak-hash = "0.10.0"
hash256-std-hasher = "0.15.2"
metastruct = "0.1.0"
ethereum-types = "0.14.1"
types = { path = "types" }


[profile.highperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
