[package]
name = "executionbackup"
version = "1.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2" }
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1.4"
tracing-subscriber = "0.3.18"
serde_json = "1.0.108"
futures = "0.3.29"
jsonwebtoken = "9.2.0"
serde = {version = "1.0.193", features = ["derive"] }
chrono = "0.4.31"
clap = "2.33.3"
triehash = "0.8.4"
rlp = "0.5.2"
keccak-hash = "0.10.0"
ethereum-types = "0.14.1"
types = { path = "types" }
arcstr = "1.1.5"
lazy_static = "1.4.0"
hex = "0.4.3"


[workspace]
members = ["types"]

[profile.highperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
