[package]
name = "executionbackup-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
json = "*"
actix-web = "4"
tracing = "0.1"
tracing-subscriber = "0.2.0"
futures = "0.3"