[package]
name = "types"
version = "0.1.0"
authors = ["TennisBowling <tennisbowling@tennisbowling.com>"]
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
hex = "0.4"
hash-db = "0.15.2"
ethers-core = "1.0.2"
keccak-hash = "0.10.0"
hash256-std-hasher = "0.15.2"
metastruct = "0.1.0"
ethereum-types = "0.14.1"
array-bytes = "6.1.0"