[package]
name = "types"
version = "0.1.0"
authors = ["TennisBowling <tennisbowling@tennisbowling.com>"]
edition = "2021"

[dependencies]
serde_json = "1.0.108"
serde = {version = "1.0.193", features = ["derive"] }
hex = "0.4.3"
hash-db = "0.15.2"
ethers-core = "1.0.2"
keccak-hash = "0.10.0"
hash256-std-hasher = "0.15.2"
metastruct = "0.1.0"
ethereum-types = "0.14.1"
array-bytes = "6.1.0"
ethereum_serde_utils = "0.5.1"
ssz_types = "0.6.0"
superstruct = "0.7.0"
reqwest = { version = "0.11.22", features = ["json"] }
jsonwebtoken = "9.2.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1.4"
chrono = "0.4.31"
lazy_static = "1.4.0"
regex = "1.10.3"
